--- a/bottomless-block-builder.cbp
+++ b/bottomless-block-builder.cbp
@@ -9,8 +9,9 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/bottomless-block-builder" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-g" />
@@ -31,12 +32,24 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="`wx-config --cflags`" />
 			<Add option="-Wall" />
+			<Add option="-std=c++11" />
+			<Add option="`wx-config --cflags`" />
 		</Compiler>
 		<Linker>
 			<Add option="`wx-config --libs`" />
 		</Linker>
+		<Unit filename="BBBApp.cpp" />
+		<Unit filename="BBBApp.hpp" />
+		<Unit filename="BBBFrame.cpp" />
+		<Unit filename="BBBFrame.hpp" />
+		<Unit filename="BBBGui.cpp" />
+		<Unit filename="BBBGui.h" />
+		<Unit filename="PanelDisplay.cpp" />
+		<Unit filename="PanelDisplay.hpp" />
+		<Unit filename="panel.hpp" />
+		<Unit filename="panel_table.cpp" />
+		<Unit filename="panel_table.hpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
